# indicium

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  desktop.ini
benches/: all_bench.rs  search_bench.rs
src/: lib.rs
src/select2/: countries.rs  mod.rs  pagination.rs  record.rs  request.rs  search_select2.rs  selectable.rs  tests.rs
src/select2/flat/: mod.rs  response.rs  results.rs
src/select2/groupable/: group.rs  groupable_record.rs  grouped_results.rs  mod.rs  results.rs  tests.rs
src/select2/grouped/: mod.rs  response.rs  results.rs
src/select2/selectable/: flat_record.rs  flat_results.rs  mod.rs  results.rs  tests.rs
src/simple/: autocomplete.rs  autocomplete_type.rs  builder.rs  clear.rs  conjunction.rs  default.rs  deref.rs  deref_mut.rs  dump_keyword.rs  eddie_metric.rs  eddie_type.rs  indexable.rs  indexable_keywords.rs  insert.rs  keyword_autocomplete.rs  keyword_search.rs  keyword_search_internal.rs  max_keys_per_keyword.rs  maximum_keys_per_keyword.rs  mod.rs  new.rs  profile.rs  remove.rs  replace.rs  search.rs  search_and.rs  search_index.rs  search_or.rs  search_type.rs  select2.rs  string_keywords.rs  strsim_metric.rs  strsim_type.rs  tests.rs  typeahead.rs
src/simple/and/: autocomplete.rs  search.rs
src/simple/autocomplete/: and.rs  context.rs  global.rs  keyword.rs  mod.rs
src/simple/internal/: and_search.rs  autocomplete.rs  index_range.rs  indexable_keywords.rs  internal_and_search.rs  keyword_search.rs  mod.rs  normalize.rs  search.rs  search_and.rs  search_top_scores.rs  string_keywords.rs
src/simple/internal/eddie/: autocomplete_context_metric.rs  autocomplete_global.rs  autocomplete_global_metric.rs  eddie_autocomplete.rs  eddie_context_autocomplete.rs  eddie_global_autocomplete.rs  eddie_global_keyword.rs  eddie_keyword.rs  keyword_global.rs  keyword_global_metric.rs  metric.rs  mod.rs
src/simple/internal/eddie/autocomplete/: context_damerau_levenshtein.rs  context_jaro.rs  context_jaro_winkler.rs  context_levenshtein.rs  context_sorensen_dice.rs  global_damerau_levenshtein.rs  global_jaro.rs  global_jaro_winkler.rs  global_levenshtein.rs  global_sorensen_dice.rs  mod.rs
src/simple/internal/eddie/keyword/: global_damerau_levenshtein.rs  global_jaro.rs  global_jaro_winkler.rs  global_levenshtein.rs  global_sorensen_dice.rs  mod.rs
src/simple/internal/eddie/metrics/: damerau_levenshtein.rs  hamming.rs  jaro.rs  jaro_winkler.rs  levenshtein.rs  mod.rs
src/simple/internal/fuzzers/: eddie_metric.rs  fuzzy.rs  fuzzy_top_scores.rs  mod.rs  rapidfuzz_metric.rs  strsim_metric.rs
src/simple/internal/fuzzers/eddie/: context.rs  context_metric.rs  fuzzy.rs  global.rs  global_metric.rs  keyword.rs  keyword_metric.rs  mod.rs  substitute.rs  substitute_metric.rs
src/simple/internal/fuzzers/rapidfuzz/: context.rs  context_comparator.rs  fuzzy.rs  global.rs  global_comparator.rs  keyword.rs  keyword_comparator.rs  mod.rs  substitute.rs  substitute_comparator.rs
src/simple/internal/fuzzers/strsim/: context.rs  context_metric.rs  fuzzy.rs  mod.rs  (+7 more)
src/simple/internal/fuzzies/: eddie_metric.rs  fuzzy.rs  mod.rs  rapidfuzz_metric.rs
src/simple/internal/fuzzy_top_scores/: find_bottom.rs  insert.rs  min_score.rs  mod.rs  remove_bottom.rs  results.rs  with_capacity.rs
src/simple/internal/or_top_scores/: find_bottom.rs  insert.rs  mod.rs  remove_bottom.rs  results.rs  with_capacity.rs
src/simple/internal/rapidfuzz/: autocomplete_context.rs  autocomplete_context_comparator.rs  autocomplete_context_generic.rs  autocomplete_global.rs  autocomplete_global_comparator.rs  autocomplete_global_generic.rs  batch_comparator.rs  keyword_global.rs  keyword_global_comparator.rs  keyword_global_generic.rs  mod.rs  rapidfuzz_autocomplete.rs  rapidfuzz_context_autocomplete.rs  rapidfuzz_global_autocomplete.rs  rapidfuzz_keyword.rs
src/simple/internal/search_top_scores/: find_bottom.rs  insert.rs  mod.rs  remove_bottom.rs  results.rs  with_capacity.rs
src/simple/internal/strsim/: autocomplete_context.rs  autocomplete_context_metric.rs  autocomplete_global.rs  autocomplete_global_metric.rs  keyword_global.rs  keyword_global_metric.rs  mod.rs  strsim_autocomplete.rs  strsim_context_autocomplete.rs  strsim_global_autocomplete.rs  strsim_global_keyword.rs  strsim_keyword.rs
src/simple/internal/strsim_top_scores/: find_bottom.rs  insert.rs  mod.rs  remove_bottom.rs  results.rs  with_capacity.rs
src/simple/internal/top_scores/: find_bottom.rs  insert.rs  keys.rs  keywords.rs  mod.rs  remove_bottom.rs  results.rs  with_capacity.rs
src/simple/keyword/: autocomplete.rs  mod.rs  search.rs
src/simple/live/: context.rs  global.rs  keyword.rs  mod.rs
src/simple/or/: autocomplete.rs  search.rs
src/simple/search/: and.rs  keyword.rs  live.rs  mod.rs  or.rs
(+126 files in other folders)
