[package]
name = "indicium"
version = "0.6.1"
authors = ["Dylan Bowker <dylan.bowker@arkiteq.ca>"]
edition = "2021"
categories = [ "database-implementations" ]
description = "Simple in-memory search for collections and key-value stores."
documentation = "https://docs.rs/indicium"
keywords = [ "search", "autocomplete", "struct", "vec", "hashmap" ]
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/leontoeides/indicium"
rust-version = "1.62.1"

[features]
default = [ "simple", "eddie", "ahash" ]
simple = []
select2 = [ "simple", "serde" ]
fuzzy = [ "eddie" ] # Deprecated feature. Redirects to `eddie` feature.
ahash = [ "dep:ahash" ]
eddie = [ "dep:eddie" ]
gxhash = [ "dep:gxhash" ]
strsim = [ "dep:strsim" ]

[dependencies]
ahash = { version = "0.8", optional = true }
eddie = { version = "0.4", optional = true }
gxhash = { version = "3.1", optional = true }
kstring = "2.0"
serde = { version = "1.0", features = [ "derive" ], optional = true }
strsim = { version = "0.11", optional = true }
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"

[badges]
maintenance = { status = "actively-developed" }