[package]
name = "indicium"
version = "0.6.5"
authors = ["Dylan Bowker <dylan.bowker@arkiteq.io>"]
edition = "2021"
categories = ["database-implementations"]
description = "Simple in-memory search for collections and key-value stores."
documentation = "https://docs.rs/indicium"
keywords = ["search", "autocomplete", "struct", "vec", "hashmap"]
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/leontoeides/indicium"
rust-version = "1.73.0"

[features]
default = ["simple"]

simple = ["rapidfuzz", "rustc-hash"]
select2 = ["simple", "dep:serde"]

fuzzy = ["rapidfuzz"]
strsim = ["dep:strsim"]
eddie = ["dep:eddie"] # Quite fast but not stable. Not recommended
rapidfuzz = ["dep:rapidfuzz"]

ahash = ["dep:ahash"]
gxhash = ["dep:gxhash"]
rustc-hash = ["dep:rustc-hash"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
ahash = { version = "0.8", optional = true }
beef = "0.5"
eddie = { version = "0.4", optional = true }
gxhash = { version = "3.4", optional = true }
kstring = "2.0"
rapidfuzz = { version = "0.5", optional = true }
rustc-hash = { version = "2.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
strsim = { version = "0.11", optional = true }
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
gabble = "0.1"
pretty_assertions = "1"
rand = "0.8.*"

[[bench]]
name = "all_bench"
harness = false