[package]
name = "indicium"
version = "0.6.10"
authors = ["Dylan Bowker <dylan.bowker@arkiteq.io>"]
edition = "2021"
categories = ["database-implementations"]
description = "Simple in-memory search for collections and key-value stores."
documentation = "https://docs.rs/indicium"
keywords = ["search", "autocomplete", "struct", "vec", "hashmap"]
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/leontoeides/indicium"
rust-version = "1.82.0"

[features]
default = ["simple", "rapidfuzz", "rustc-hash", "icu_normalizer"]
simple = []
select2 = ["simple", "dep:serde"]

# String similarity options:
fuzzy = ["rapidfuzz"]
strsim = ["dep:strsim"]
eddie = ["dep:eddie"] # Pretty fast but not currently stable. Not recommended
rapidfuzz = ["dep:rapidfuzz"]

# Hasher options:
ahash = ["dep:ahash"]
gxhash = ["dep:gxhash"]
rustc-hash = ["dep:rustc-hash"]

# Normalization options:
unicode-normalization = ["dep:unicode-normalization"]
icu_normalizer = ["dep:icu_normalizer"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
ahash = { version = "0.8", optional = true }
beef = "0.5"
eddie = { version = "0.4", optional = true }
gxhash = { version = "3.5", optional = true }
icu_normalizer = { version = "2.2", optional = true }
kstring = "2.0"
rapidfuzz = { version = "0.5", optional = true }
rustc-hash = { version = "2.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
strsim = { version = "0.11", optional = true }
tracing = "0.1"
unicode-normalization = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
gabble = "0.2"
pretty_assertions = "1"
rand = "0.9"

[[bench]]
name = "all_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false